# ff-iii-toolkit-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  csv_reader.py  entrypoint.sh  main.py  makefile  pyproject.toml  tx_processor.py  txt_parser.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  lint.yml  pytest_coverage.yml  ty.yml
alembic/: env.py
alembic/versions/: 287bec6d8d4e_init.py  35d5250d14e6_init_schema.py  4d7f8e9a1b2c_drop_plaintext_secret_from_user_secrets.py  5801f6f0a1a8_add_password_set_invites.py  8f4e1b6d2c3a_add_user_secret_crypto_fields_and_vaults.py  adc7ba2730be_add_user_secrets.py  e1170f5f7dbf_add_alias_to_user_secrets.py
app/: main.py
app/api/: auth.py  file.py
app/services/: auth.py
backend/: CHANGELOG.md  pyproject.toml
backend/app/: main.py
cli/: allegro.py
src/: main.py  settings.py
src/api/: auth.py  deps_db.py  deps_runtime.py  deps_services.py  deps_user_secrets.py  file.py  upload.py
src/ff_iii_toolkit_api.egg-info/: PKG-INFO
src/services/: allegro_application_service.py  allegro_service.py  allegro_state_store.py  auth.py  blik_application_service.py  blik_state_store.py  csv_reader.py  exceptions.py  firefly_allegro_service.py  firefly_base_service.py  firefly_blik_service.py  firefly_enrichment_service.py  firefly_tx_service.py  guards.py  matcher.py  password_set_tokens.py  secret_crypto_service.py  tx_application_service.py  tx_processor.py  user_secrets_service.py  vault_service.py  vault_session_store.py
src/utils/: logger.py
static/: file.html  index.html
tests/: conftest.py  test_app_smoke.py  test_settings.py
tests/api/: test_deps_db.py  test_deps_services.py
tests/domain/: test_bank_record.py  test_match_result.py  test_metrics.py
tests/models/: test_simplified_record_pretty_print.py
tests/routers/: test_allegro_router.py  test_auth.py  test_blik_files.py  test_citi_import.py  test_me.py  test_system.py  test_transactions.py  test_tx.py  test_user_secrets_router.py  test_users.py
tests/services/: test_allegro_api.py  test_allegro_application_service.py  (+23 more)
(+108 files in other folders)
