[project]
name = "ff-iii-toolkit-api"
version = "2.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastapi>=0.121.2",
 "pydantic>=2",
 "pydantic-settings>=2.12.0",
 "pyjwt>=2.10.1",
 "python-multipart>=0.0.20",
 "starlette>=0.37.2",
 "uvicorn>=0.38.0",
 "python-dotenv>=1.0.0",
 "pandas>=2.3.3",
 "pandas-stubs>=2.3.3.251201",
 "httpx>=0.28.1",
 "ff-iii-luciferin>=1.0.0b2",
 "requests>=2.32.5",
 "sqlalchemy>=2.0.45",
 "passlib[bcrypt]>=1.7.4",
 "argon2-cffi>=25.1.0",
]




[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
annotated_tag = true
update_changelog_on_bump = true
ignore_missing_version = true

[dependency-groups]
dev = [
    "black>=25.11.0",
    "commitizen>=4.10.0",
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[tool.deptry]
package_module_name_map = { "pyjwt" = "jwt","python-dotenv" = "dotenv" }

[tool.deptry.per_rule_ignores]
DEP002 = ["python-multipart","uvicorn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
filterwarnings = [
  "ignore:Support for class-based `config` is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # warnings
  "I",   # importy (zamiast isort)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

ignore = [
  "E501", # line-length → ruff-format ogarnia
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"src/api/**/*.py" = ["B008"]
"src/services/auth.py" = ["B008"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
  "*/__init__.py",
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
